Fix hidden overflow on interaction modal

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -7969,7 +7969,7 @@ noscript {
   width: 600px;
   background: $ui-base-color;
   border-radius: 8px;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
   display: block;
   padding: 20px;
